# impostor

./: .gitignore  Cargo.toml  README.md  aivmachine.cfg
examples/: indirect_6502_aivmachine.asm  loop.asm  test_wikipedia.raw
src/: lib.rs  tests.rs
src/adapter/: mod.rs  tests.rs
src/audio/: mod.rs
src/chip8/: mod.rs
src/debugger/: mod.rs
src/dma/: mod.rs
src/graphics/: mod.rs  vga_mode13h_palette.rs
src/input/: mod.rs
src/memcontroller/: mod.rs
src/mos6502/: mod.rs  tests.rs
src/ram/: mod.rs
src/random/: mod.rs
src/rom/: mod.rs
src/screen/: mod.rs
src/storage/: mod.rs
src/synth/: mod.rs
src/timer/: mod.rs
src/unixterm/: mod.rs
src/utils/: mod.rs
src/z80/: mod.rs
