[package]
name = "impostor"
version = "0.1.0"
authors = ["Roberto De Ioris <roberto@unbit.it>"]

[dependencies]
rodio = ">=0.8.1"
timer = ">=0.2.0"
chrono = ">=0.4.6"
num-traits = ">=0.2.5"
glutin = ">=0.18"
gl = ">=0.10.0"
rand = ">=0.5.5"
clap = ">=2.32.0"
rustyline = ">=2.1.0"

[profile.dev]
overflow-checks = false
